# cherrypy-peewee-demo

./: fish.db  main.py  pyproject.toml
server/: app.py  models.py
